--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "purescript-transformers": "^3.4.0",
     "purescript-tuples": "^4.1.0",
     "purescript-maps": "^3.5.1",
-    "purescript-datetime": "^3.3.0"
+    "purescript-datetime": "^3.3.0",
+    "purescript-backtrack": "https://github.com/juspay/purescript-backtrack.git"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
